--- a/Videojuegos Pato/appsettings.json
+++ b/Videojuegos Pato/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "VideojuegosPatoDataBase": "Server=.;Database=VideojuegosPatoDataBase;Trusted_Connection=True;"
+  }
 }
