--- a/Videojuegos Pato/Videojuegos Pato.csproj
+++ b/Videojuegos Pato/Videojuegos Pato.csproj
@@ -16,4 +16,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\media\Advertisement\" />
+    <Folder Include="wwwroot\media\VideojuegosPato\" />
+    <Folder Include="wwwroot\media\ProductImages\" />
+  </ItemGroup>
+
 </Project>
